fix: auth cookie on route

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
-DB_URI='mongodb+srv://alokverma:AENSHxCqXHc8T8Dl@cluster0.vfwfuxm.mongodb.net/?retryWrites=true&w=majority'
+DB_URI=''
 DB_NAME='technokratos'
+ADMIN_EMAIL=''
