--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "eslint": "^8",
